--- a/src/css/partials/media.scss
+++ b/src/css/partials/media.scss
@@ -956,6 +956,9 @@
       margin: 0 auto;
     }
   }
+  form#views-exposed-form-news-page-news {
+    float: none !important;
+  }
   .pagination {
     display: none;
   }
